generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id               String    @id @default(cuid())
  name             String
  email            String?   @unique
  password         String?
  emailVerified    DateTime?
  image            String?
  role             String?   @default("USER") // "ADMIN"
  address          String? // domicilio
  phone            String?
  active           Boolean   @default(true)
  stripeCustomerId String?   @unique
  accounts         Account[]
  pedidos          Pedido[]
}

model Account {
  id                String  @id @default(cuid())
  userId            String
  type              String
  provider          String
  providerAccountId String
  refresh_token     String?
  access_token      String?
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String?
  session_state     String?
  user              User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
}

model Repartidor {
  id       Int      @id @default(autoincrement())
  nombre   String
  telefono String
  pedidos  Pedido[]

  @@map("repartidores")
}

model Pedido {
  id              Int         @id @default(autoincrement())
  fecha_hora      DateTime
  estado          Int         @default(1) // 0 CANCELADO, 1 PENDIENTE, 2 EN REPARTO, 3 ENTREGADO
  repartidorId    Int?
  repartidor      Repartidor? @relation(fields: [repartidorId], references: [id])
  clienteId       String?
  cliente         User?       @relation(fields: [clienteId], references: [id])
  stripeSessionId String?     @unique

  pedidoPizzas PedidoPizza[]

  @@map("pedidos")
}

model Pizza {
  id           Int           @id @default(autoincrement())
  nombre       String
  foto         String?
  precio       Float
  ingredientes Ingrediente[]
  pedidoPizzas PedidoPizza[]

  @@map("pizzas")
}

model PedidoPizza {
  pedidoId Int
  pedido   Pedido @relation(fields: [pedidoId], references: [id], onDelete: Cascade)

  pizzaId Int
  pizza   Pizza @relation(fields: [pizzaId], references: [id], onDelete: Cascade)

  cantidad Int @default(1)

  @@id([pedidoId, pizzaId])
  @@map("pedido_pizzas")
}

model Ingrediente {
  id          Int     @id @default(autoincrement())
  nombre      String  @unique
  descripcion String?
  pizzas      Pizza[]

  @@map("ingredientes")
}
